...
                activeIcon: Icon(Icons.restaurant_menu, size: 28),
                label: 'MENU',
              ),
              BottomNavigationBarItem(
                icon: _buildCartIcon(false),
                activeIcon: _buildCartIcon(true),
                label: 'CART',
              ),
              const BottomNavigationBarItem(
                icon: Icon(Icons.stars),
                activeIcon: Icon(Icons.stars, size: 28),
                label: 'LOYALTY',
              ),
...
