...
                        borderRadius: BorderRadius.circular(8),
                      ),
                    ),
                    child: const Row(
                      mainAxisAlignment: MainAxisAlignment.center,
                      children: [
                        Text(                          'CHECKOUT',                          style: TextStyle(
                            fontFamily: 'MontserratBlack',
                            fontSize: 18,
                            height: 1.42,
                            letterSpacing: 0.1,
                            color: Colors.white,
                          ),
...
